--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,11 +30,11 @@ spring:
       #redis?????(???0)
       database: 0
       #redis?????
-      host: localhost
+      host: 127.0.0.1
       #redis???????
       port: 6379
       #redis????
-      password: 123456
+#      password: 123456
 
 
 mybatis-plus:
